# samantha-cli

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION.md  MODEL_DOWNLOAD.md  README.md  pyproject.toml  run_tests.py  setup_samantha.py
samantha/: __init__.py  brain.py  cli.py  config.py  personality.py  stt_local.py  tts_local.py  ui.py  voice.py
tests/: README.md  __init__.py  test_stt_download.py  test_tts_download.py  test_voice_engine.py
