[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samantha-cli"
version = "0.1.0"
description = "Give Claude a voice. A voice assistant powered by Claude, inspired by Her."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Ethan Rogers", email = "ethan@ethanplus.ai"}]
keywords = ["ai", "voice", "assistant", "claude", "tts", "speech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core dependencies
    "rich>=13.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",

    # Local STT (Speech-to-Text) with Whisper
    "faster-whisper>=1.0.0",
    "pyaudio>=0.2.14",

    # Local TTS (Text-to-Speech) with Piper
    "piper-tts>=1.2.0",

    # Optional: Cloud fallback (can be removed for 100% local)
    "SpeechRecognition>=3.10; extra == 'cloud'",
    "fish-audio-sdk>=0.1; extra == 'cloud'",
]

[project.optional-dependencies]
cloud = [
    "SpeechRecognition>=3.10",
    "fish-audio-sdk>=0.1",
]

[project.scripts]
samantha = "samantha.cli:main"

[project.urls]
Homepage = "https://ethanplus.ai"
Repository = "https://github.com/ethanplusai/samantha-cli"
